src/styles/_contest.scss
@include media-breakpoint-up($desktop-breakpoint) {
  .popup-container.popup-contest-voting {
    max-width: 429px;
  }
}

.popup-contest-voting {
  .ok-btn {
    margin-right: 15px;
  }
  .bottom-buttons {
    margin-top: 15px;
  }
}

.contest {
  &-links {
    display: flex;
    flex-flow: row wrap;
    @include media-breakpoint-down($desktop-breakpoint) {
      flex-flow: column nowrap;
    }
    a {
      margin: 3px 20px;
      &.selected {
        opacity: 0.5;
      }
    }
    span {
      @include media-breakpoint-down($desktop-breakpoint) {
        display: none;
      }
      opacity: 0.5;
      &:last-child {
        display: none;
      }
    }
  }
  &-title {
    margin-bottom: 10px;
  }
  .userView {
    margin-bottom: 20px;
    @include media-breakpoint-down($desktop-breakpoint) {
      width: 286px;
      margin-left: auto;
      margin-right: auto;
    }
    &.active {
      border: 2px solid rgba($default-secondary-color, 0.5);
    }
    .bg {
      height: 278px;
      background-size: cover;
      background-position: center;
      background-color: rgba($gray, 0.1);
    }
    .profile-text {
      margin-bottom: 15px;
    }
    .more-functions {
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
    }
    .user-container {
      flex: auto;
      // height: 222px;
    }
    .top-votes-container {
      height: 75px;
    }
  }
  .awards-title {
    select {
      width: auto;
      display: inline-block;
    }
  }
}
.contest-header {
  margin: 0 0 20px;
  img {
    width: 100%;
  }
}

.ContestsCollectionView {

}

